--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "engines": {
     "node": ">=6"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express-list-endpoints": "^4.0.0"
+  },
   "devDependencies": {
     "ava": "^1.2.1",
     "eslint": "^5.3.0",
