--- a/package.json
+++ b/package.json
@@ -33,9 +33,14 @@
   },
   "devDependencies": {
     "ava": "^1.2.1",
+    "body-parser": "^1.18.3",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "express": "^4.16.4",
     "nyc": "^13.3.0"
+  },
+  "peerDependencies": {
+    "express": "4.x"
   }
 }
